--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <nav>
                 <ul>
               <li>Home</li>
-              <li>Classes Available</li>
+              <li>Scanned Textbooks</li>
               <li>Ask Your Doubts</li>
               <li class="sign"><a href="signup.php">Sign Up/ Log In</a></li>
               </ul>
@@ -28,7 +28,6 @@
             </div>
             <hr>
             <h1 id="welh1"><span style='border:2px black solid;'>Welcome to Let's Quiz! <br>The World's NO.1<br>Quizzing Website</span></h1>
-
         <script src="script.js" async defer></script>
     </body>
 </html>
