--- a/index.html
+++ b/index.html
@@ -19,15 +19,36 @@
               </div>
             <nav>
                 <ul>
-              <li>Home</li>
-              <li>Scanned Textbooks</li>
-              <li>Ask Your Doubts</li>
+            <li><a href="#footer">Follow Us</a></li>
+              <li><a href="scantb.html">Scanned Textbooks</a></li>
+              <li><a href="aydoubt.html">Ask Your Doubts</a></li>
               <li class="sign"><a href="signup.php">Sign Up/ Log In</a></li>
               </ul>
               </nav>    
             </div>
             <hr>
             <h1 id="welh1"><span style='border:2px black solid;'>Welcome to Let's Quiz! <br>The World's NO.1<br>Quizzing Website</span></h1>
-        <script src="script.js" async defer></script>
+            <div class="row">
+                <div class="column">
+                  <img src="head1.jpg" alt="Snow" style="width:100%" height="350px">
+                </div>
+                <div class="column">
+                  <img src="head2.jpg" alt="Forest" style="width:100%" height="350px">
+                </div>
+              </div> <br><br>
+              <!-- SECTION -->
+              <div Id="wrapper">
+                <section class="p">
+                    <ul id="a">
+                      <li>
+                          <img src="boy1.jpg" alt="" width=180px class="pic">
+                          <p class="pa">info</p>
+                        
+                      </li>
+                    </ul>
+                  </section>
+          
+                     </div>       
+              <script src="script.js" async defer></script>
     </body>
 </html>
