--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <nav>
                 <ul>
             <li><a href="#footer">Follow Us</a></li>
-              <li><a href="scantb.html">Scanned Textbooks</a></li>
+              <li><a href="scantb.html" target="blank">Scanned Textbooks</a></li>
               <li><a href="aydoubt.html">Ask Your Doubts</a></li>
               <li class="sign"><a href="signup.php">Sign Up/ Log In</a></li>
               </ul>
