--- a/scantb.html
+++ b/scantb.html
@@ -176,7 +176,9 @@
             <hr>
             <h1 id="welh1"><span style='border:2px black solid;'>Scanned TextBooks<br>By<br>Let's Quiz</span></h1>
             <div id="box">
-                
+                <select>
+                    <option>Please Select Class</option>
+                </select>
             </div>
         <script>
 var MenuItems = document.getElementById("MenuItems");
