--- a/scantb.html
+++ b/scantb.html
@@ -177,19 +177,19 @@
             <h1 id="welh1"><span style='border:2px black solid;'>Scanned TextBooks<br>By<br>Let's Quiz</span></h1>
             <div id="box">
                 <select id="cardtype">
-                    <option>Please Select Class</option>
-                    <option>Class 1</option>
-                    <option>Class 2</option>
-                    <option>Class 3</option>
-                    <option>Class 4</option>
-                    <option>Class 5</option>
-                    <option>Class 6</option>
-                    <option>Class 7</option>
-                    <option>Class 8</option>
-                    <option>Class 9</option>
-                    <option>Class 10</option>
-                    <option>Class 11</option>
-                    <option>Class 12</option>
+                    <option value="0">Please Select Class</option>
+                    <option value="1">Class 1</option>
+                    <option value="2">Class 2</option>
+                    <option value="3">Class 3</option>
+                    <option value="4">Class 4</option>
+                    <option value="5">Class 5</option>
+                    <option value="6">Class 6</option>
+                    <option value="7">Class 7</option>
+                    <option value="8">Class 8</option>
+                    <option value="9">Class 9</option>
+                    <option value="10">Class 10</option>
+                    <option value="11">Class 11</option>
+                    <option value="12">Class 12</option>
                 </select>
             </div>
         <script>
@@ -212,9 +212,34 @@ var MenuItems = document.getElementById("MenuItems");
 {
  var ddl = document.getElementById("cardtype");
  var selectedValue = ddl.options[ddl.selectedIndex].value;
-    if (selectedValue == "selectcard")
+    if (selectedValue == "0")
    {
     alert("Please select a card type");
+   }
+   else if(selectedValue == "2"){
+    function generate() {
+ 
+ var values = ["dog", "cat", "parrot", "rabbit"];
+
+ var select = document.createElement("select");
+ select.name = "pets";
+ select.id = "pets"
+
+ for (const val of values)
+ {
+     var option = document.createElement("option");
+     option.value = val;
+     option.text = val.charAt(0).toUpperCase() + val.slice(1);
+     select.appendChild(option);
+ }
+
+ var label = document.createElement("label");
+ label.innerHTML = "Choose your pets: "
+ label.htmlFor = "pets";
+
+ document.getElementById("container").appendChild(label).appendChild(select);
+}
+    
    }
 }
         </script>
